objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of service entitlement.</description>
        <inlineHelpText>Description of service entitlement.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entitlement_Combo__c</fullName>
        <formula>Name&amp;&quot;  -  &quot;&amp;BusinessHours.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Combo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>SLA.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>